deprecated/selfhost-v1/kubernetes-v1/deprecated/webhook-relay/database.yml
# PostgreSQL configuration
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: webhookrelay
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16.1
          ports:
            - containerPort: 5432
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-data
            - mountPath: /docker-entrypoint-initdb.d
              name: init-script
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-data
        - name: init-script
          configMap:
            name: init-data
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: webhookrelay
spec:
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
  selector:
    app: postgres

# Redis configuration
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: webhookrelay
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:7.2.4
          args:
            - --requirepass
            - $(REDIS_PASSWORD)
          ports:
            - containerPort: 6379
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 50m
              memory: 64Mi
          volumeMounts:
            - mountPath: /data
              name: redis-data
      volumes:
        - name: redis-data
          persistentVolumeClaim:
            claimName: redis-data
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: webhookrelay
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: redis
