deprecated/selfhost-v1/kubernetes-v1/deprecated/webhook-relay/service.yml
apiVersion: v1
kind: Service
metadata:
  name: webhookrelay-service
  namespace: webhookrelay
spec:
  selector:
    app: transponder
  ports:
    - name: api-https
      port: 443
      targetPort: 9300
      protocol: TCP
    - name: api-http
      port: 80
      targetPort: 9301
      protocol: TCP
    - name: grpc
      port: 9302
      targetPort: 9302
      protocol: TCP
  type: ClusterIP
